# SUEWS

./: .fprettify.rc  .gitignore  .gitmodules  .impeccable.md  .mcp.json  .readthedocs.yaml  .readthedocs.yml  .ruff.toml  .zenodo.json  C0_rulebook.csv  C1_rulebook.csv  CHANGELOG.md  CLAUDE.md  CLAUDE_CI_INSTRUCTIONS.md  COMPARISON.md  CONTRIBUTING.md  CONVERSION_NEXT_STAGE_PROPOSAL.md  CONVERSION_PROGRESS_REPORT.md  DEBUG_LOG_CIBUILDWHEEL_ARM64.md  EXACT_CAUSE_ANALYSIS.md  FORTRAN_TO_C_PORT.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_SUMMARY.md  ISSUE_CLEANUP_STRATEGY.md  MCP_INTEGRATION_STATUS.md  Makefile  NAMING_CONVENTION_IMPLEMENTATION.md  NAMING_CONVENTION_REVISED_PLAN.md  NAMING_CONVENTION_REVISION_PLAN.md  NAMING_STANDARD_SUMMARY.md  PLATFORM_COMPATIBILITY.md  PR_DESCRIPTION.md  README.md  RSL_FIX_SUMMARY.md  SUEWS_CONVERSION_DESIGN.md  SUEWS_CONVERT_PROGRESS_REPORT.md  SUEWS_SurfaceResistance.f95  TESTING_IMPLEMENTATION_TASKS.md  TESTS_TO_RUN.md  WIZARD_WORKFLOW_TECH_DOC.md  (+99 more)
mcp/: .gitignore  CLAUDE.md  EVALUATION_SUMMARY.md  IMPROVED_CREATE_CONFIG.md  KNOWLEDGE_REVIEW_CHECKLIST.md  Makefile  QA_REVIEW_WORKFLOW.md  QUESTIONS_LIST.md  README.md  REVIEW_QUICK_START.md  TESTING.md  TESTING_SESSION_SUMMARY.md  YOUR_QUESTIONS.md  bootstrap.js  evaluate_mcp.py  manifest.json  pyproject.toml  question_bank.json  server.json  test_one_question.sh  test_reference_generation.sh
mcp-server/: .gitignore  DEVELOPMENT_PLAN.md  DXT_BUILD_GUIDE.md  MCP_PROGRESS.md  QUICKSTART.md  README.md  README_SIMPLIFIED.md  build_extension.py  build_extension_simple.py  check_and_run.py  claude_desktop_config.json  manifest.json  manifest_simple.json  mcp_cli.py  pyproject.toml  requirements.txt  requirements_minimal.txt  run_server.py  test_all_tools.py  test_as_claude.py  test_client.py  test_local_server.py  test_mcp_local.py  test_server.py  test_simple.py  validate_dxt.py
mcp-server-simple/: CLAUDE_EXAMPLE.md  README.md  cli.py  pyproject.toml  server.py  settings.py  test_client.py
mcp-server/examples/: demo.py  example_config.yaml
mcp-server/src/suews_mcp/: __init__.py  __main__.py  check_supy.py  data_models.py  server.py
mcp-server/test_env/: pyvenv.cfg
mcp/.github/workflows/: build-mcpb.yml
mcp/docs/: FORCING_DATA_TOOLS_DESIGN.md  NESTED_CONFIG_UPDATE_INTEGRATION.md  PHOENIX_TEST_HANDOFF.md  REORGANIZATION_SUMMARY.md  SESSION_SUMMARY_20251022.md  SKILLS_INTEGRATION_STRATEGY.md  USE_CASES.md
mcp/docs/evaluation/: EVALUATION_FRAMEWORK.md  EVALUATION_STATUS_REPORT.md
mcp/docs/setup/: API_TEST_SETUP.md  SETUP.md
mcp/docs/testing/: CC_DEV_MONITORING.md  CC_TEST_HANDOFF.md  ISOLATED_TESTING.md  MCP_TESTING_ISSUES.md  PHOENIX_IRRIGATION_TEST_PLAN.md  TESTING_README.md  TEST_VERSION_MARKER.md  TOKEN_LIMIT_SOLUTIONS.md
mcp/evaluation/: CONFIG_QUESTION_DIAGNOSIS.md  CORRECTNESS_ANALYSIS.md  EXECUTIVE_SUMMARY.md  GAP_ANALYSIS.md  QUANTITATIVE_ANALYSIS.md  README.md  SCORED_ANALYSIS.md  SCORING_LIMITATIONS.md  TALK_SUMMARY.md  generate_reference_answers.py  generate_reference_with_claude_code.py  review_knowledge.py
mcp/evaluation/evaluation_results/: scored_results.json  (+1 more)
mcp/evaluation_results/: evaluation_report.md  reference_answers.json
mcp/scripts/: build_source_index.py  install_mcp_clients.py  setup_cds_api.py  test_mcp_local.py  test_mcp_with_api.py
mcp/tests/: conftest.py  eval_cases.yaml  test_analyze.py  test_backend_local.py  test_configure.py  test_constants.py  test_data_catalogue.py  test_diagnostic.py  test_execute_tool.py  test_explain_tool.py  test_helpers.py  test_knowledge.py  test_phoenix_irrigation.py  test_prompts.py  test_search_tool.py  test_simulate.py  test_source_index.py  test_tool_validate.py  test_tools.py  test_utilities.py
scm/: .gitignore  README.md  build_site.py  pyproject.toml
scm/benchmarks/: _style.py  run_cbl.py  run_coupled_kcl.py  run_gabls1.py  run_multiyear.py  run_native_vs_python.py
scm/demos/: _common.py  demo_anthropogenic_heat.py  demo_cool_roofs.py  demo_urban_rural.py
scm/site/: index.html  index.template.html
scm/suews_scm/: __init__.py  column.py  constants.py  coupling.py  grid.py  native.py  slab.py  surface.py  thermo.py  tridiag.py
scm/tests/: test_column.py  test_coupling.py  test_gabls1.py  test_grid.py  test_native.py  test_slab.py  test_thermo.py  test_tridiag.py
src/suews_bridge/: Cargo.toml  README.md  bridge-manifest.json  build.rs  docs-bridge-rationale.md  docs-epic-issue-draft.md  docs-phase2-roadmap.md  pyproject.toml
src/suews_core/: Cargo.toml  README.md  bridge-manifest.json  build.rs  docs-bridge-rationale.md  docs-epic-issue-draft.md  docs-phase2-roadmap.md  pyproject.toml
src/supy/: __init__.py  _check.py  _dts_check.py  _env.py  _load.py  _misc.py  _post.py  _run.py  _run_dts.py  _run_output.py  _run_rust.py  _save.py  _soil_obs.py  _state_accessors.py  _supy_module.py  _var_metadata.py  _version.py  build_rust_bridge.py  checker_rules_indiv.json  meson.build  run_make.py  scm.py  suews_checkpoint.py  suews_forcing.py  suews_output.py  suews_sim.py  validation.py
src/supy_driver/: bundle_windows_dlls.py  f2py-f90wrap-patched.py  makefile  meson.build  move_output_gen.py  patch_setjmp_windows.py  patch_supy_driver.py  run_f2py.py  run_f90wrap.py  run_make.py
suews-mcp/: .coveragerc  .gitignore  CHANGELOG.md  IMPLEMENTATION_NOTES.md  INSTALL_CLAUDE_DESKTOP.md  LICENSE  MANIFEST.in  Makefile  PREPROCESSING.md  README.md  RESOURCE_MANAGEMENT.md  SUPY_DEPENDENCY.md  claude-desktop-config.json  documentation.md  final_validation.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  setup.py  test_basic.py  test_integration_simple.py  test_resources.py  test_resources_fixed.py  tox.ini  validate_supy_tools.py  validate_test_setup.py  validate_test_syntax.py
suews-mcp/docs/: api_reference.md  faq.md  quickstart.md
suews-mcp/templates/: README.md  resource_catalog.json
suews-mcp/tests/: __init__.py  conftest.py  test_basic_functionality.py  test_error_handling.py  test_preprocessing.py  test_preprocessing_tools.py  test_server.py  test_supy_integration.py
(+2125 files in other folders)
