[build-system]
requires = [
    "wheel",
    "f90wrap==0.2.16",
    "numpy>=2.0",
    "meson-python>=0.12.0",
]
build-backend = 'mesonpy'

[project]
name = "supy"
description = "The SUEWS model that speaks Python"
authors = [
    { name = "Dr Ting Sun", email = "ting.sun@ucl.ac.uk" },
]
dynamic = ["version"]
requires-python = ">=3.9"
license = { text = "GPL-V3.0" }
readme = "README.md"

# Core runtime dependencies only
dependencies = [
    # Data processing
    "pandas",
    "numpy>=2.0",
    "scipy<1.15; python_version >= '3.11' and python_version < '3.13' and platform_system == 'Linux'",  # manylinux2014 wheels
    "scipy; python_version < '3.11' or python_version >= '3.13' or platform_system != 'Linux'",  # Others use latest
    # xarray removed - only needed for gridded ERA5 (install separately)
    # dask removed - CLI uses stdlib multiprocessing.pool.ThreadPool

    # Model requirements
    "pydantic",
    "pyyaml",  # YAML configuration parsing (used in data_model/core/config.py)
    "f90nml",
    
    # Utilities
    "matplotlib",
    "seaborn",
    "chardet",
    "click",
    "pyarrow>=20,<21; python_version < '3.14' and platform_system == 'Linux'",  # Linux needs manylinux2014 wheels on CPython 3.9-3.13
    "pyarrow>=20; python_version < '3.14' and platform_system != 'Linux'",  # Non-Linux platforms may use newer pyarrow binaries
    "pyarrow>=22; python_version >= '3.14'",  # 22.x provides cp314 wheels on manylinux_2_28/macOS/Windows

    # Scientific packages
    "atmosp",
    "scikit-learn",
    
    # Optimization
    "lmfit",
    
    # Data access
    "cdsapi",  # ERA5 data download (timeseries uses CSV, gridded requires optional h5netcdf)

    # Time/location
    "tzfpy>=1.0.0",  # Faster timezone finder with Windows wheels
    "pytz",
    
    # Schema validation (for YAML configs)
    "jsonschema",
    "rich",

    # Version checking (pandas compatibility in _load.py)
    "packaging",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
# TMY/EPW generation support (requires pvlib which depends on h5py)
tmy = [
    "pvlib",
    "metpy",  # Required for UMEP EPW conversion (util/_UMEP2epw.py)
]

# Single dev group combining test + development tools
dev = [
    # Testing
    "pytest",
    "pytest-cov",
    
    # Code formatting
    "ruff",
    "fprettify",
    
    # Development
    "ipykernel",
    
    # Documentation - Essential only (based on conf.py usage)
    "sphinx>=7,<9",
    "sphinx-autobuild",
    "sphinx-book-theme",        # Active theme in conf.py
    "pybtex",                   # Bibliography processing
    "sphinxcontrib-bibtex>=2.6,<3", # Bibliography support (heavily customised)
    "sphinx-design>=0.7.0",     # Collapsible sections for YAML config docs (>=0.7 supports Sphinx 8)
    "sphinx-last-updated-by-git", # Git info in docs
    "sphinx-click",             # CLI documentation
    "sphinx-gallery>=0.16.0",   # Gallery examples from Python scripts (GH-1029)
    "docutils>=0.21,<0.22",     # Sphinx 8 requires docutils >=0.21
    "jinja2>=3.0",         # Version pinned for compatibility - # MP removed upper limit
]

[project.scripts]
suews-run = "supy.cmd.SUEWS:SUEWS"
suews-bridge = "supy.cmd.rust_bridge:main"
suews-convert = "supy.cmd.table_converter:convert_table_cmd"
suews-validate = "supy.cmd.validate_config:main"
suews-schema = "supy.cmd.schema_cli:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:pydantic.main",
]
# Test markers for tiered CI testing
markers = [
    "smoke: Minimal wheel validation (~6 tests, ~60s)",
    "core: Core physics & logic tests (Fortran, driver)",
    "util: Utility function tests (non-critical)",
    "cfg: Config/schema validation tests",
    "slow: Tests taking >30s individually",
    "qgis: UMEP plugin tests in test/umep/ (Windows + Python 3.12 only)",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
