[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suews-mcp"
version = "0.1.0"
description = "Model Context Protocol server for SUEWS urban climate model"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "SUEWS Development Team"},
]
dependencies = [
    "mcp>=1.3.4",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.20",
    "pandas>=2.0",
    "xarray>=2024.0",
    "supy==2025.6.2.dev",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
suews-mcp = "suews_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/suews_mcp"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # Line length handled by black