[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suews-mcp"
description = "Model Context Protocol server for SUEWS — read-only Phase-1 (validation, inspection, schema, examples)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
dynamic = ["version"]
authors = [
    { name = "SUEWS Development Team" },
]
dependencies = [
    "supy",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
suews-mcp = "suews_mcp.server:main"

[tool.setuptools.dynamic]
version = { attr = "suews_mcp._version_scm.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
