[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suews-mcp"
description = "Model Context Protocol server for SUEWS — read-only Phase-1 (validation, inspection, schema, examples)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
dynamic = ["version"]
authors = [
    { name = "SUEWS Development Team" },
]
dependencies = [
    "supy",
    "mcp>=1.2",
    # Pin httpx away from the in-flight 1.0 dev line (gh#1399). The official
    # `mcp` package transitively depends on `httpx_sse`, which has an
    # unpinned dep on `httpx`. With `uv pip install --prerelease=allow` the
    # resolver picks up `httpx==1.0.dev3`, which removed `TransportError`
    # and breaks the `httpx_sse` import chain — taking the whole `mcp`
    # import down on startup. Constraining here means even a
    # prerelease-permitted resolve cannot land on `httpx 1.x`.
    "httpx<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
suews-mcp = "suews_mcp.server:main"

[tool.setuptools.dynamic]
# Read via the package __init__ (which itself goes through _version.py with a
# tracked fallback chain: _version_scm -> supy.__version__ -> "0+unknown").
# Pointing setuptools directly at _version_scm broke fresh `pip install -e mcp/`
# because that file is gitignored and only created by `python get_ver_git.py`.
version = { attr = "suews_mcp.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
