[project]
name = "suews-scm"
version = "0.1.0"
description = "Research-grade single-column model over the SUEWS framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "supy",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["suews_scm"]
