[package]
name = "suews_bridge"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "GPL-3.0-or-later"
description = "Rust bridge MVP for SUEWS OHM Fortran C API"

[lib]
name = "suews_bridge"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "suews"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]
python-extension = ["python", "pyo3/extension-module"]
physics = []
arrow-output = ["dep:arrow"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
paste = "1.0"

[dependencies.arrow]
version = "54"
optional = true
default-features = false
features = ["ipc"]

[dependencies.pyo3]
version = "0.22"
optional = true
features = ["abi3-py39"]
