py.install_sources(
    [
        '__init__.py',
        '_check.py',
        '_env.py',
        '_load.py',
        '_misc.py',
        '_post.py',
        '_run.py',
        '_save.py',
        '_supy_driver_wrapper.py',
        '_supy_module.py',
        '_version.py',
        '_version_scm.py',
        'suews_sim.py',
        'code2file.json',
        'checker_rules_indiv.json',
        'checker_rules_joint.json',
        'var2siteselect.json',
        [
            'cmd/__init__.py',
            'cmd/SUEWS.py',
            'cmd/table_converter.py',
            'cmd/to_yaml.py',
        ],
        [
            'util/_UMEP2epw.py',
            'util/__init__.py',
            'util/_atm.py',
            'util/_debug.py',
            'util/_era5.py',
            'util/code_manager.py',
            'util/conversion_engine.py',
            'util/_gap_filler.py',
            'util/_gs.py',
            'util/_io.py',
            'util/_missing.py',
            'util/_ohm.py',
            'util/_plot.py',
            'util/_roughness.py',
            'util/_spinup.py',
            'util/_state_io.py',
            'util/_tmy.py',
            'util/converter/__init__.py',
            'util/converter/table/__init__.py',
            'util/converter/table/table.py',
            'util/converter/table/profile_manager.py',
            'util/converter/table/rules.csv',
            'util/converter/yaml.py',
        ],
        [
            'sample_data/sample_config.yml',
            'sample_data/Kc_2012_data_60.txt'
        ],
        [
            'ext_data/CRU_TS4.06_1991_2020.parquet',
            'ext_data/README.md'
        ],
        [
            'data_model/__init__.py',
            'data_model/core.py',
            'data_model/hydro.py',
            'data_model/human_activity.py',
            'data_model/model.py',
            'data_model/ohm.py',
            'data_model/profile.py',
            'data_model/site.py',
            'data_model/state.py',
            'data_model/surface.py',
            'data_model/timezone_enum.py',
            'data_model/type.py',
            'data_model/validation_controller.py',
            'data_model/validation_utils.py',
            'data_model/yaml_annotator.py',
            'data_model/yaml_annotator_json.py',
            'data_model/yaml_processor/__init__.py',
            'data_model/yaml_processor/phase_a_parameter_update.py',
            'data_model/yaml_processor/phase_b_science_check.py',
            'data_model/yaml_processor/phase_c_pydantic_report.py',
            'data_model/yaml_processor/orchestrator.py',
            'data_model/yaml_processor/validation_helpers.py',
        ],
        [
            'ext_data/CRU_TS4.06_1991_2020.parquet',
        ],
    ],
    subdir: 'supy',
    preserve_path: true,
)