py.install_sources(
    [
        '__init__.py',
        '_check.py',
        '_env.py',
        '_load.py',
        '_misc.py',
        '_post.py',
        '_run.py',
        '_save.py',
        '_supy_driver_wrapper.py',
        '_supy_module.py',
        '_version.py',
        '_version_scm.py',
        'suews_sim.py',
        'code2file.json',
        'checker_rules_indiv.json',
        'checker_rules_joint.json',
        'var2siteselect.json',
        [
            'cmd/__init__.py',
            'cmd/SUEWS.py',
            'cmd/table_converter.py',
            'cmd/to_yaml.py',
            'cmd/validate_config.py',
            'cmd/schema_cli.py',
        ],
        [
            'cli/__init__.py',
            'cli/wizard/__init__.py',
            'cli/wizard/cli.py',
            'cli/wizard/engine.py',
            'cli/wizard/steps/__init__.py',
            'cli/wizard/steps/base.py',
            'cli/wizard/steps/basic.py',
            'cli/wizard/steps/forcing.py',
            'cli/wizard/steps/surface.py',
            'cli/wizard/steps/initial.py',
            'cli/wizard/steps/advanced.py',
            'cli/wizard/validators/__init__.py',
            'cli/wizard/validators/pydantic_integration.py',
            'cli/wizard/utils/__init__.py',
            'cli/wizard/utils/display.py',
            'cli/wizard/utils/state.py',
            'cli/wizard/templates/__init__.py',
            'cli/wizard/templates/urban.yaml',
            'cli/wizard/templates/suburban.yaml',
            'cli/wizard/templates/rural.yaml',
        ],
        [
            'util/_UMEP2epw.py',
            'util/__init__.py',
            'util/_atm.py',
            'util/_debug.py',
            'util/_era5.py',
            'util/code_manager.py',
            'util/conversion_engine.py',
            'util/_gap_filler.py',
            'util/_gs.py',
            'util/_io.py',
            'util/_missing.py',
            'util/_ohm.py',
            'util/_plot.py',
            'util/_roughness.py',
            'util/_spinup.py',
            'util/_state_io.py',
            'util/_tmy.py',
            'util/converter/__init__.py',
            'util/converter/table/__init__.py',
            'util/converter/table/table.py',
            'util/converter/table/profile_manager.py',
            'util/converter/table/rules.csv',
            'util/converter/yaml.py',
        ],
        [
            'sample_data/sample_config.yml',
            'sample_data/Kc_2012_data_60.txt'
        ],
        [
            'ext_data/CRU_TS4.06_1991_2020.parquet',
            'ext_data/README.md'
        ],
        [
            'data_model/__init__.py',
            'data_model/README.md',
            'data_model/doc_utils.py',
            'data_model/core/__init__.py',
            'data_model/core/config.py',
            'data_model/core/human_activity.py',
            'data_model/core/hydro.py',
            'data_model/core/model.py',
            'data_model/core/ohm.py',
            'data_model/core/profile.py',
            'data_model/core/site.py',
            'data_model/core/state.py',
            'data_model/core/surface.py',
            'data_model/core/timezone_enum.py',
            'data_model/core/type.py',
            'data_model/validation/__init__.py',
            'data_model/validation/core/__init__.py',
            'data_model/validation/core/controller.py',
            'data_model/validation/core/feedback.py',
            'data_model/validation/core/utils.py',
            'data_model/validation/core/yaml_helpers.py',
            'data_model/validation/pipeline/__init__.py',
            'data_model/validation/pipeline/orchestrator.py',
            'data_model/validation/pipeline/phase_a_parameter_update.py',
            'data_model/validation/pipeline/phase_b_science_check.py',
            'data_model/validation/pipeline/phase_c_pydantic_report.py',
            'data_model/validation/pipeline/yaml_annotator.py',
            'data_model/schema/__init__.py',
            'data_model/schema/version.py',
            'data_model/schema/migration.py',
            'data_model/schema/updater.py',
            'data_model/schema/publisher.py',
            'data_model/schema/exporter.py',
            'data_model/schema/registry.py',
        ],
        [
            'ext_data/CRU_TS4.06_1991_2020.parquet',
        ],
    ],
    subdir: 'supy',
    preserve_path: true,
)
